[package]
name = "bde"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "B-Decoder/Encoder"
readme = "README.md"
documentation = "https://docs.rs/bde"
repository = "https://github.com/morr0ne/bde"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
itoa = "1.0.9"
num-traits = "0.2.17"
serde = { version = "1.0.215", default-features = false }
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.93"
serde_bytes = "0.11.9"
serde_derive = "1.0.215"
serde_test = "1.0.160"
url = { version = "2.5.3", features = ["serde"] }

[features]
default = ["std"]
std = ["serde/std"]
